--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,13 +1,28 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>home</ion-title>
+  <ion-toolbar color="primary">
+    <ion-title>
+      Pokédex
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">home</ion-title>
+      <ion-title size="large">Pokédex</ion-title>
     </ion-toolbar>
   </ion-header>
-</ion-content>
+
+  <ion-list>
+    <ion-item *ngFor="let pokemon of pokemons" [button]="true">
+
+      <ion-avatar slot="start">
+        <img [src]="pokemon.image" />
+      </ion-avatar>
+
+      <ion-label class="ion-text-capitalize">
+        <h2>{{ pokemon.name }}</h2>
+      </ion-label>
+    </ion-item>
+  </ion-list>
+  </ion-content>
