--- a/src/app/pages/favorites/favorites.page.html
+++ b/src/app/pages/favorites/favorites.page.html
@@ -1,13 +1,42 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>favorites</ion-title>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/home"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Favorite Pokémon</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">favorites</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ng-container *ngIf="favorites$ | async as favorites">
+    <ion-grid *ngIf="favorites.length > 0">
+      <ion-row>
+        <ion-col size="4" size-sm="3" size-md="2" *ngFor="let pokemon of favorites">
+          <ion-card>
+            <ion-img [src]="pokemon.image" [alt]="pokemon.name"></ion-img>
+            <ion-card-header>
+              <ion-card-title class="ion-text-capitalize">{{ pokemon.name }}</ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+              <ion-button expand="block" [routerLink]="['/details', pokemon.id]" color="primary">
+                View Details
+              </ion-button>
+              <ion-button expand="block" (click)="removeFavorite(pokemon)" color="danger">
+                <ion-icon name="heart-dislike-outline" slot="start"></ion-icon>
+                Remove
+              </ion-button>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+
+    <div class="ion-padding ion-text-center" *ngIf="favorites.length === 0">
+      <ion-icon name="heart-outline" size="large" color="medium"></ion-icon>
+      <p>Nenhum Pokémon favorito ainda</p>
+      <ion-button routerLink="/home" fill="clear">
+        Go catch some!
+      </ion-button>
+    </div>
+  </ng-container>
 </ion-content>
