--- a/src/app/pages/details/details.page.html
+++ b/src/app/pages/details/details.page.html
@@ -1,13 +1,68 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>details</ion-title>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/home"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Pokémon Details</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">details</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content [fullscreen]="true" *ngIf="pokemon$ | async as pokemon">
+  <div class="ion-padding">
+    <div class="pokemon-header ion-text-center">
+      <img [src]="pokemon.image" [alt]="pokemon.name" class="pokemon-image">
+      <h1 class="ion-text-capitalize">{{ pokemon.name }}</h1>
+      <div class="types">
+        <ion-chip *ngFor="let type of pokemon.types" [color]="type">
+          {{ type }}
+        </ion-chip>
+      </div>
+      <ion-button (click)="toggleFavorite(pokemon)" [color]="isFavorite(pokemon.id) ? 'danger' : 'medium'">
+        <ion-icon [name]="isFavorite(pokemon.id) ? 'heart' : 'heart-outline'" slot="start"></ion-icon>
+        {{ isFavorite(pokemon.id) ? 'Remove from Favorites' : 'Add to Favorites' }}
+      </ion-button>
+    </div>
+
+    <ion-list>
+      <ion-item>
+        <ion-label>
+          <h2>Height</h2>
+          <p>{{ pokemon.height! / 10 }} m</p>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>
+          <h2>Weight</h2>
+          <p>{{ pokemon.weight! / 10 }} kg</p>
+        </ion-label>
+      </ion-item>
+    </ion-list>
+
+    <ion-list>
+      <ion-list-header>
+        <ion-label>Stats</ion-label>
+      </ion-list-header>
+      <ion-item *ngFor="let stat of pokemon.stats">
+        <ion-label>
+          <h2 class="ion-text-capitalize">{{ stat.name.replace('-', ' ') }}</h2>
+          <ion-progress-bar [value]="stat.value / 100" [color]="stat.value > 50 ? 'success' : 'warning'">
+          </ion-progress-bar>
+          <p class="stat-value">{{ stat.value }}</p>
+        </ion-label>
+      </ion-item>
+    </ion-list>
+  </div>
+</ion-content>
+
+<ion-content *ngIf="isLoading" class="ion-padding ion-text-center">
+  <ion-spinner name="circular"></ion-spinner>
+  <p>Loading Pokemon details...</p>
+</ion-content>
+
+<ion-content *ngIf="error" class="ion-padding ion-text-center">
+  <ion-icon name="alert-circle-outline" color="danger" size="large"></ion-icon>
+  <p>{{ error }}</p>
+  <ion-button routerLink="/home" fill="clear">
+    Go Back Home
+  </ion-button>
 </ion-content>
