--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,7 +1,12 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="primary">
     <ion-title>
-      Pokédex
+      Pokédex - Página {{ currentPage }}/{{ totalPages }}
+      <ion-progress-bar
+        [value]="currentPage / totalPages"
+        color="light"
+        class="progress-indicator">
+      </ion-progress-bar>
     </ion-title>
     <ion-buttons slot="end">
       <ion-button routerLink="/favorites">
@@ -18,9 +23,9 @@
     </ion-toolbar>
   </ion-header>
 
-  <ion-grid *ngIf="!isLoading && !error && pokemons.length > 0">
+  <ion-grid *ngIf="!isLoading && !error && pokemons.length > 0" role="list" aria-label="Lista de Pokémons">
     <ion-row>
-      <ion-col size="4" size-sm="3" size-md="2" *ngFor="let pokemon of pokemons">
+      <ion-col size="4" size-sm="3" size-md="2" *ngFor="let pokemon of pokemons" role="listitem">
         <ion-card [button]="true" class="ion-text-center" [routerLink]="['/details', pokemon.id]">
           <img [src]="pokemon.image" class="pokemon-sprite" />
           <ion-card-header>
@@ -33,7 +38,32 @@
     </ion-row>
   </ion-grid>
 
-  <div class="ion-padding ion-text-center" *ngIf="isLoading">
+  <!-- Controles de Paginação -->
+  <div class="pagination-controls ion-text-center ion-padding">
+    <ion-button [disabled]="currentPage === 1" (click)="loadPage(1)" fill="clear" size="small">
+      <ion-icon name="play-skip-back"></ion-icon>
+    </ion-button>
+
+    <ion-button [disabled]="currentPage === 1" (click)="previousPage()">
+      <ion-icon name="arrow-back" slot="start"></ion-icon>
+      Anterior
+    </ion-button>
+
+    <span class="page-info">
+      Página {{ currentPage }} de {{ totalPages }}
+    </span>
+
+    <ion-button [disabled]="currentPage === totalPages" (click)="nextPage()">
+      Próxima
+      <ion-icon name="arrow-forward" slot="end"></ion-icon>
+    </ion-button>
+
+    <ion-button [disabled]="currentPage === totalPages" (click)="loadPage(totalPages)" fill="clear" size="small">
+      <ion-icon name="play-skip-forward"></ion-icon>
+    </ion-button>
+  </div>
+
+  <div class="ion-padding ion-text-center" *ngIf="isLoading && !pokemons.length">
     <ion-spinner name="circular"></ion-spinner>
     <p>Carregando Pokémons...</p>
   </div>
@@ -41,7 +71,7 @@
   <div class="ion-padding ion-text-center" *ngIf="error">
     <ion-icon name="alert-circle-outline" color="danger" size="large"></ion-icon>
     <p>{{ error }}</p>
-    <ion-button (click)="loadPokemons()" fill="clear">
+    <ion-button (click)="loadPage(1)" fill="clear">
       Tentar Novamente
     </ion-button>
   </div>
