--- a/src/app/pages/favorites/favorites.page.scss
+++ b/src/app/pages/favorites/favorites.page.scss
@@ -3,7 +3,7 @@ ion-card {
 
   ion-img {
     padding: 10px;
-    background-color: #f5f5f5;
+    background-color: #535353;
   }
 
   ion-card-header {
