--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,18 +1,32 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="primary">
     <ion-title>
-      Pokédex - Página {{ currentPage }}/{{ totalPages }}
-      <ion-progress-bar
-        [value]="currentPage / totalPages"
-        color="light"
-        class="progress-indicator">
-      </ion-progress-bar>
+      <ng-container *ngIf="!isSearching">
+        Pokédex - Página {{ currentPage }}/{{ totalPages }}
+        <ion-progress-bar
+          [value]="currentPage / totalPages"
+          color="light"
+          class="progress-indicator">
+        </ion-progress-bar>
+      </ng-container>
+      <ng-container *ngIf="isSearching">
+        Resultados da busca
+      </ng-container>
     </ion-title>
     <ion-buttons slot="end">
       <ion-button routerLink="/favorites">
         Favoritos
       </ion-button>
     </ion-buttons>
+  </ion-toolbar>
+  <ion-toolbar color="primary">
+    <ion-searchbar
+      placeholder="Buscar Pokémon"
+      [(ngModel)]="searchTerm"
+      (ionInput)="searchPokemon()"
+      animated="true"
+      color="light">
+    </ion-searchbar>
   </ion-toolbar>
 </ion-header>
 
@@ -23,9 +37,9 @@
     </ion-toolbar>
   </ion-header>
 
-  <ion-grid *ngIf="!isLoading && !error && pokemons.length > 0" role="list" aria-label="Lista de Pokémons">
+  <ion-grid *ngIf="!isLoading && !error && displayedPokemons.length > 0" role="list" aria-label="Lista de Pokémons">
     <ion-row>
-      <ion-col size="4" size-sm="3" size-md="2" *ngFor="let pokemon of pokemons" role="listitem">
+      <ion-col size="4" size-sm="3" size-md="2" *ngFor="let pokemon of displayedPokemons" role="listitem">
         <ion-card [button]="true" class="ion-text-center" [routerLink]="['/details', pokemon.id]">
           <img [src]="pokemon.image" class="pokemon-sprite" />
           <ion-card-header>
@@ -39,7 +53,7 @@
   </ion-grid>
 
   <!-- Controles de Paginação -->
-  <div class="pagination-controls ion-text-center ion-padding">
+  <div class="pagination-controls ion-text-center ion-padding" *ngIf="filteredPokemons.length > 0">
     <ion-button [disabled]="currentPage === 1" (click)="loadPage(1)" fill="clear" size="small">
       <ion-icon name="play-skip-back"></ion-icon>
     </ion-button>
@@ -63,7 +77,7 @@
     </ion-button>
   </div>
 
-  <div class="ion-padding ion-text-center" *ngIf="isLoading && !pokemons.length">
+  <div class="ion-padding ion-text-center" *ngIf="isLoading && !allPokemons.length">
     <ion-spinner name="circular"></ion-spinner>
     <p>Carregando Pokémons...</p>
   </div>
@@ -71,12 +85,12 @@
   <div class="ion-padding ion-text-center" *ngIf="error">
     <ion-icon name="alert-circle-outline" color="danger" size="large"></ion-icon>
     <p>{{ error }}</p>
-    <ion-button (click)="loadPage(1)" fill="clear">
+    <ion-button (click)="loadAllPokemons()" fill="clear">
       Tentar Novamente
     </ion-button>
   </div>
 
-  <div class="ion-padding ion-text-center" *ngIf="!isLoading && !error && pokemons.length === 0">
+  <div class="ion-padding ion-text-center" *ngIf="!isLoading && !error && displayedPokemons.length === 0">
     <ion-icon name="sad-outline" size="large"></ion-icon>
     <p>Nenhum Pokémon encontrado</p>
   </div>
